Update the config to build a minimal image

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -91,7 +91,7 @@ MACHINE ??= "qemux86-64"
 # Ultimately when creating custom policy, people will likely end up subclassing 
 # these defaults.
 #
-DISTRO ?= "poky"
+DISTRO = "poky-tiny"
 # As an example of a subclass there is a "bleeding" edge policy configuration
 # where many versions are set to the absolute latest code from the upstream 
 # source control systems. This is just mentioned here as an example, its not
@@ -146,7 +146,7 @@ DISTRO ?= "poky"
 # meta/classes-recipe/image.bbclass and
 # meta/classes-recipe/core-image.bbclass for more details.
 # We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
+EXTRA_IMAGE_FEATURES = ""
 
 #
 # Additional image features
@@ -249,7 +249,7 @@ BB_DISKMON_DIRS ??= "\
 #
 # By default native qemu will build with a builtin VNC server where graphical output can be
 # seen. The line below enables the SDL UI frontend too.
-PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
+# PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 # By default libsdl2-native will be built, if you want to use your host's libSDL instead of 
 # the minimal libsdl built by libsdl2-native then uncomment the ASSUME_PROVIDED line below.
 #ASSUME_PROVIDED += "libsdl2-native"
@@ -286,3 +286,14 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
+
+IMAGE_FEATURES = ""
+# IMAGE_INSTALL = "busybox bash kernel-modules"
+# INIT_MANAGER = "mdev-busybox" 
+PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-tiny"
+# PREFERRED_VERSION_linux-raspberrypi = "6.10%"
+BAD_RECOMMENDATIONS += "gcc curl perl python3 glibc-locale iptables shadow sqlite3 ptest-runner"
+# DISTRO_FEATURES = "minimal"
+# DISTRO_FEATURES_remove = "x11 systemd nfs"
+
+IMAGE_INSTALL = "busybox bash kernel-modules"
