Add Raspberry Pi config and replace the kernel

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -9,5 +9,6 @@ BBLAYERS ?= " \
   ${TOPDIR}/poky/meta \
   ${TOPDIR}/poky/meta-poky \
   ${TOPDIR}/poky/meta-yocto-bsp \
+  ${TOPDIR}/meta-raspberrypi \
   ${TOPDIR}/meta-custom \
   "
