--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -197,7 +197,7 @@ BB_DISKMON_DIRS ??= "\
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-rt"
+PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
 # PREFERRED_VERSION_linux-raspberrypi = "6.10%"
 
 PACKAGE_EXCLUDE:remove = "shadow-base"
