--- a/conf/local.conf
+++ b/conf/local.conf
@@ -25,7 +25,7 @@ DL_DIR ?= "${TOPDIR}/build/downloads"
 #
 # The default is a sstate-cache directory under TOPDIR.
 #
-SSTATE_DIR ?= "${TOPDIR}/build/sstate-cache"
+SSTATE_DIR = "${TOPDIR}/build/sstate-cache"
 
 #
 # Where to place the build output
@@ -37,7 +37,7 @@ SSTATE_DIR ?= "${TOPDIR}/build/sstate-cache"
 #
 # The default is a tmp directory under TOPDIR.
 #
-TMPDIR ?= "${TOPDIR}/build/tmp"
+TMPDIR = "${TOPDIR}/build/tmp"
 
 # Use a custom bootloader (optional)
 # PREFERRED_PROVIDER_virtual/bootloader = "u-boot-custom"
@@ -45,26 +45,9 @@ TMPDIR ?= "${TOPDIR}/build/tmp"
 #
 # Machine Selection
 #
-# You need to select a specific machine to target the build with. There are a selection
-# of emulated machines available which can boot and run in the QEMU emulator:
-#
-#MACHINE ?= "qemuarm"
-#MACHINE ?= "qemuarm64"
-#MACHINE ?= "qemumips"
-#MACHINE ?= "qemumips64"
-#MACHINE ?= "qemuppc"
-#MACHINE ?= "qemux86"
-#MACHINE ?= "qemux86-64"
-#
-# There are also the following hardware board target machines included for 
-# demonstration purposes:
-#
-#MACHINE ?= "beaglebone-yocto"
-#MACHINE ?= "genericarm64"
-#MACHINE ?= "genericx86"
-#MACHINE ?= "genericx86-64"
-#
-# This sets the default machine to be qemux86-64 if no other machine is selected:
-MACHINE = "qemux86-64"
+MACHINE = "raspberrypi4"
 
 DISTRO = "distro-custom"
+
+# Adding this statement deletes the work directory used for building a recipe once the recipe is built.
+INHERIT += "rm_work"
