Image with Mender done

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -51,3 +51,5 @@ DISTRO = "distro-custom"
 
 # Adding this statement deletes the work directory used for building a recipe once the recipe is built.
 INHERIT += "rm_work"
+
+INIT_MANAGER = "systemd"
