--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -201,3 +201,26 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
 # PREFERRED_VERSION_linux-raspberrypi = "6.10%"
 
 PACKAGE_EXCLUDE:remove = "shadow-base"
+
+INHERIT += "mender-full"
+
+# https://docs.mender.io/1.4/artifacts/building-mender-yocto-image#configuring-the-build
+# The name of the disk image and Artifact that will be built.
+# This is what the device will report that it is running, and different updates must have different names
+# because Mender will skip installation of an Artifact if it is already installed.
+MENDER_ARTIFACT_NAME = "release-1"
+
+ARTIFACTIMG_FSTYPE = "ext4"
+
+# # For Raspberry Pi, uncomment the following block:
+# MENDER_PARTITION_ALIGNMENT_KB = "4096"
+# MENDER_BOOT_PART_SIZE_MB = "40"
+
+DISTRO_FEATURES:append = " systemd"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+VIRTUAL-RUNTIME_initscripts = ""
+
+MENDER_FEATURES_ENABLE:append = " mender-uboot mender-image-sd"
+MENDER_FEATURES_DISABLE:append = " mender-grub mender-image-uefi"
+
+MENDER_SERVER_URL = "https://ec2-3-249-34-75.eu-west-1.compute.amazonaws.com"
