--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -10,5 +10,9 @@ BBLAYERS ?= " \
   ${TOPDIR}/poky/meta-poky \
   ${TOPDIR}/poky/meta-yocto-bsp \
   ${TOPDIR}/meta-raspberrypi \
+  ${TOPDIR}/meta-openembedded/meta-oe \
+  ${TOPDIR}/meta-openembedded/meta-python \
+  ${TOPDIR}/meta-openembedded/meta-networking \
+  ${TOPDIR}/meta-mender/meta-mender-core \
   ${TOPDIR}/meta-custom \
   "
