--- a/meta-custom/conf/layer.conf
+++ b/meta-custom/conf/layer.conf
@@ -1,6 +1,11 @@
 BBPATH .= ":${LAYERDIR}"
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb"
+
+BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
+	${LAYERDIR}/recipes-*/*/*.bbappend"
+
 BBFILE_COLLECTIONS += "meta-custom"
+
 BBFILE_PATTERN_meta-custom = "^${LAYERDIR}/"
+
 LAYERVERSION_meta-custom = "1"
 LAYERSERIES_COMPAT_meta-custom = "scarthgap"
