Move to Poky, successful systemd build

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -9,10 +9,10 @@ BBLAYERS ?= " \
   ${TOPDIR}/poky/meta \
   ${TOPDIR}/poky/meta-poky \
   ${TOPDIR}/poky/meta-yocto-bsp \
-  ${TOPDIR}/meta-raspberrypi \
   ${TOPDIR}/meta-openembedded/meta-oe \
   ${TOPDIR}/meta-openembedded/meta-python \
   ${TOPDIR}/meta-openembedded/meta-networking \
   ${TOPDIR}/meta-mender/meta-mender-core \
+  ${TOPDIR}/meta-mender/meta-mender-qemu \
   ${TOPDIR}/meta-custom \
   "
