--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -1,12 +1,9 @@
-require conf/distro/poky-tiny.conf
+require conf/distro/poky.conf
 
 # Define custom distribution name and version
 DISTRO = "distro-custom"
 DISTRO_NAME = "Custom Linux Distribution"
 DISTRO_VERSION = "1.0"
-
-# Use IPK package management instead of RPM (Poky default is RPM)
-# PACKAGE_CLASSES = "package_ipk"
 
 #
 # Package Management configuration
@@ -20,7 +17,9 @@ DISTRO_VERSION = "1.0"
 #  - 'package_rpm' for rpm style packages
 # E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
 # OE-Core defaults to ipkg, whilst Poky defaults to rpm:
-PACKAGE_CLASSES = "package_deb"
+
+# Can't use package_deb with read only filesystem
+PACKAGE_CLASSES = "package_ipk"
 
 #
 # SDK target architecture
@@ -197,12 +196,24 @@ BB_DISKMON_DIRS ??= "\
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
+PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
+# PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
 # PREFERRED_VERSION_linux-raspberrypi = "6.10%"
+
+# KERNEL_DEVICETREE = "qemux86-64"
 
 PACKAGE_EXCLUDE:remove = "shadow-base"
 
+POKY_INIT_MANAGER = "systemd"
+INIT_MANAGER = "systemd"
+
 INHERIT += "mender-full"
+
+# Poky sets 
+# DISTRO_FEATURES = acl alsa bluetooth debuginfod ext2 ipv4 ipv6 pcmcia usbgadget usbhost wifi xattr nfs zeroconf pci 3g nfc x11 vfat seccomp opengl ptest multiarch wayland vulkan systemd usrmerge pulseaudio gobject-introspection-data ldconfig
+# xattr needed for capabilities
+# vfat for USB storage filesystem
+DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig"
 
 # https://docs.mender.io/1.4/artifacts/building-mender-yocto-image#configuring-the-build
 # The name of the disk image and Artifact that will be built.
@@ -210,17 +221,10 @@ INHERIT += "mender-full"
 # because Mender will skip installation of an Artifact if it is already installed.
 MENDER_ARTIFACT_NAME = "release-1"
 
-ARTIFACTIMG_FSTYPE = "ext4"
+# mender-uboot mender-grub
+MENDER_FEATURES_ENABLE:append = " mender-image-sd"
+MENDER_FEATURES_DISABLE:append = " mender-image-uefi"
 
-# # For Raspberry Pi, uncomment the following block:
-# MENDER_PARTITION_ALIGNMENT_KB = "4096"
-# MENDER_BOOT_PART_SIZE_MB = "40"
-
-DISTRO_FEATURES:append = " systemd"
-VIRTUAL-RUNTIME_init_manager = "systemd"
-VIRTUAL-RUNTIME_initscripts = ""
-
-MENDER_FEATURES_ENABLE:append = " mender-uboot mender-image-sd"
-MENDER_FEATURES_DISABLE:append = " mender-grub mender-image-uefi"
+KERNEL_CMDLINE:append = " init=/lib/systemd/systemd"
 
 MENDER_SERVER_URL = "https://ec2-3-249-34-75.eu-west-1.compute.amazonaws.com"
