--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -1,4 +1,7 @@
-require conf/distro/poky.conf
+require conf/distro/include/tegrademo.inc
+
+BB_SIGNATURE_HANDLER ?= "OEEquivHash"
+BB_HASHSERVE ??= "auto"
 
 # Define custom distribution name and version
 DISTRO = "distro-custom"
@@ -196,13 +199,13 @@ BB_DISKMON_DIRS ??= "\
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
+# PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
 # PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
 # PREFERRED_VERSION_linux-raspberrypi = "6.10%"
 
 # KERNEL_DEVICETREE = "qemux86-64"
 
-PACKAGE_EXCLUDE:remove = "shadow-base"
+# PACKAGE_EXCLUDE:remove = "shadow-base"
 
 POKY_INIT_MANAGER = "systemd"
 INIT_MANAGER = "systemd"
@@ -222,8 +225,10 @@ DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig"
 MENDER_ARTIFACT_NAME = "release-1"
 
 # mender-uboot mender-grub
-MENDER_FEATURES_ENABLE:append = " mender-image-sd"
-MENDER_FEATURES_DISABLE:append = " mender-image-uefi"
+MENDER_FEATURES_DISABLE:append = " mender-uboot mender-image-sd"
+MENDER_FEATURES_ENABLE:append = " mender-image-uefi"
+
+PREFERRED_VERSION_boost = "1.86.%"
 
 KERNEL_CMDLINE:append = " init=/lib/systemd/systemd"
 
