--- a/conf/local.conf
+++ b/conf/local.conf
@@ -66,7 +66,8 @@ TMPDIR = "${TOPDIR}/build/tmp"
 #
 # This sets the default machine to be qemux86-64 if no other machine is selected:
 # MACHINE = "raspberrypi4"
-MACHINE = "qemux86-64"
+# MACHINE = "qemux86-64"
+MACHINE = "jetson-agx-orin-devkit"
 
 DISTRO = "distro-custom"
 
