--- a/meta-custom/conf/layer.conf
+++ b/meta-custom/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILE_COLLECTIONS += "meta-custom"
 BBFILE_PATTERN_meta-custom = "^${LAYERDIR}/"
 
 LAYERVERSION_meta-custom = "1"
-LAYERSERIES_COMPAT_meta-custom = "scarthgap"
+LAYERSERIES_COMPAT_meta-custom = "scarthgap styhead"
