--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -207,6 +207,8 @@ CONF_VERSION = "2"
 
 # PACKAGE_EXCLUDE:remove = "shadow-base"
 
+# KERNEL_DEVICETREE += "your-device-tree.dtb"
+
 POKY_INIT_MANAGER = "systemd"
 INIT_MANAGER = "systemd"
 
@@ -218,11 +220,36 @@ INHERIT += "mender-full"
 # vfat for USB storage filesystem
 DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig"
 
+# Needed to remove dependency on the kernel-devicetree for out-of-tree dtb
+MENDER_EFI_LOADER = ""
+
 # https://docs.mender.io/1.4/artifacts/building-mender-yocto-image#configuring-the-build
 # The name of the disk image and Artifact that will be built.
 # This is what the device will report that it is running, and different updates must have different names
 # because Mender will skip installation of an Artifact if it is already installed.
 MENDER_ARTIFACT_NAME = "release-1"
+
+ARTIFACTIMG_FSTYPE = "ext4"
+
+# Total storage size of the device
+MENDER_STORAGE_TOTAL_SIZE_MB = "4096"
+
+# Root filesystem size (active/passive partitions)
+MENDER_ROOTFS_PART_A_SIZE_MB = "1024"
+MENDER_ROOTFS_PART_B_SIZE_MB = "1024"
+
+# Boot partition size
+MENDER_BOOT_PART_SIZE_MB = "64"
+
+# Data partition (remaining space)
+MENDER_DATA_PART_SIZE_MB = "1024"
+
+MENDER_STORAGE_DEVICE_BASE = '/dev/nvme0n1p'
+
+MENDER_BOOT_PART = "${MENDER_STORAGE_DEVICE_BASE}1"
+MENDER_DATA_PART = "${MENDER_STORAGE_DEVICE_BASE}4"
+MENDER_ROOTFS_PART_A = "${MENDER_STORAGE_DEVICE_BASE}2"
+MENDER_ROOTFS_PART_B = "${MENDER_STORAGE_DEVICE_BASE}3"
 
 # mender-uboot mender-grub
 MENDER_FEATURES_DISABLE:append = " mender-uboot mender-image-sd"
@@ -230,6 +257,6 @@ MENDER_FEATURES_ENABLE:append = " mender-image-uefi"
 
 PREFERRED_VERSION_boost = "1.86.%"
 
-KERNEL_CMDLINE:append = " init=/lib/systemd/systemd"
+# KERNEL_CMDLINE:append = " init=/lib/systemd/systemd"
 
 MENDER_SERVER_URL = "https://ec2-3-249-34-75.eu-west-1.compute.amazonaws.com"
