Add custom device tree overlay

--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -203,11 +203,7 @@ CONF_VERSION = "2"
 # PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
 # PREFERRED_VERSION_linux-raspberrypi = "6.10%"
 
-# KERNEL_DEVICETREE = "qemux86-64"
-
 # PACKAGE_EXCLUDE:remove = "shadow-base"
-
-# KERNEL_DEVICETREE += "your-device-tree.dtb"
 
 POKY_INIT_MANAGER = "systemd"
 INIT_MANAGER = "systemd"
@@ -218,7 +214,7 @@ INHERIT += "mender-full"
 # DISTRO_FEATURES = acl alsa bluetooth debuginfod ext2 ipv4 ipv6 pcmcia usbgadget usbhost wifi xattr nfs zeroconf pci 3g nfc x11 vfat seccomp opengl ptest multiarch wayland vulkan systemd usrmerge pulseaudio gobject-introspection-data ldconfig
 # xattr needed for capabilities
 # vfat for USB storage filesystem
-DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig"
+DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig nvidia-kernel-oot-devicetrees"
 
 # Needed to remove dependency on the kernel-devicetree for out-of-tree dtb
 MENDER_EFI_LOADER = ""
@@ -258,5 +254,8 @@ MENDER_FEATURES_ENABLE:append = " mender-image-uefi"
 PREFERRED_VERSION_boost = "1.86.%"
 
 # KERNEL_CMDLINE:append = " init=/lib/systemd/systemd"
+
+# Remove extlinux
+TEGRA_ESSENTIAL_EXTRA_RDEPENDS = ""
 
 MENDER_SERVER_URL = "https://ec2-3-249-34-75.eu-west-1.compute.amazonaws.com"
