Remove unused settings

--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -214,7 +214,7 @@ INHERIT += "mender-full"
 # DISTRO_FEATURES = acl alsa bluetooth debuginfod ext2 ipv4 ipv6 pcmcia usbgadget usbhost wifi xattr nfs zeroconf pci 3g nfc x11 vfat seccomp opengl ptest multiarch wayland vulkan systemd usrmerge pulseaudio gobject-introspection-data ldconfig
 # xattr needed for capabilities
 # vfat for USB storage filesystem
-DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig nvidia-kernel-oot-devicetrees"
+DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig"
 
 # Needed to remove dependency on the kernel-devicetree for out-of-tree dtb
 MENDER_EFI_LOADER = ""
@@ -248,14 +248,14 @@ MENDER_ROOTFS_PART_A = "${MENDER_STORAGE_DEVICE_BASE}2"
 MENDER_ROOTFS_PART_B = "${MENDER_STORAGE_DEVICE_BASE}3"
 
 # mender-uboot mender-grub
-MENDER_FEATURES_DISABLE:append = " mender-uboot mender-image-sd"
-MENDER_FEATURES_ENABLE:append = " mender-image-uefi"
+MENDER_FEATURES_DISABLE:append = " mender-grub mender-image-sd"
+MENDER_FEATURES_ENABLE:append = " mender-uboot mender-image-uefi"
 
 PREFERRED_VERSION_boost = "1.86.%"
 
-# KERNEL_CMDLINE:append = " init=/lib/systemd/systemd"
+USE_REDUNDANT_FLASH_LAYOUT_DEFAULT = "1"
 
 # Remove extlinux
-TEGRA_ESSENTIAL_EXTRA_RDEPENDS = ""
+# TEGRA_ESSENTIAL_EXTRA_RDEPENDS = ""
 
 MENDER_SERVER_URL = "https://ec2-3-249-34-75.eu-west-1.compute.amazonaws.com"
