--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -16,5 +16,6 @@ BBLAYERS ?= " \
   ${TOPDIR}/tegra-demo-distro/layers/meta-tegra-support \
   ${TOPDIR}/tegra-demo-distro/layers/meta-tegrademo \
   ${TOPDIR}/meta-mender/meta-mender-core \
+  ${TOPDIR}/meta-mender-community/meta-mender-tegra \
   ${TOPDIR}/meta-custom \
   "
