--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "meta-mender"]
 	path = meta-mender
 	url = https://github.com/TheYoctoJester/meta-mender.git
+[submodule "meta-mender-community"]
+	path = meta-mender-community
+	url = https://github.com/Austriker/meta-mender-community.git
