Update for meta-mender-tegra community implementation

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -68,7 +68,7 @@ TMPDIR = "${TOPDIR}/build/tmp"
 # MACHINE = "raspberrypi4"
 # MACHINE = "qemux86-64"
 # MACHINE = "jetson-agx-orin-devkit"
-MACHINE = "jetson-orin-nx"
+MACHINE = "p3768-0000-p3767-0000"
 
 DISTRO = "distro-custom"
 
