--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -217,7 +217,7 @@ INHERIT += "mender-full"
 DISTRO_FEATURES = "ipv4 ipv6 usbhost wifi xattr vfat systemd usrmerge ldconfig"
 
 # Needed to remove dependency on the kernel-devicetree for out-of-tree dtb
-MENDER_EFI_LOADER = ""
+# MENDER_EFI_LOADER = ""
 
 # https://docs.mender.io/1.4/artifacts/building-mender-yocto-image#configuring-the-build
 # The name of the disk image and Artifact that will be built.
@@ -234,22 +234,28 @@ MENDER_STORAGE_TOTAL_SIZE_MB = "4096"
 MENDER_ROOTFS_PART_A_SIZE_MB = "1024"
 MENDER_ROOTFS_PART_B_SIZE_MB = "1024"
 
-# Boot partition size
-MENDER_BOOT_PART_SIZE_MB = "64"
-
 # Data partition (remaining space)
 MENDER_DATA_PART_SIZE_MB = "1024"
 
 MENDER_STORAGE_DEVICE_BASE = '/dev/nvme0n1p'
 
-MENDER_BOOT_PART = "${MENDER_STORAGE_DEVICE_BASE}1"
 MENDER_DATA_PART = "${MENDER_STORAGE_DEVICE_BASE}4"
 MENDER_ROOTFS_PART_A = "${MENDER_STORAGE_DEVICE_BASE}2"
 MENDER_ROOTFS_PART_B = "${MENDER_STORAGE_DEVICE_BASE}3"
 
-# mender-uboot mender-grub
-MENDER_FEATURES_DISABLE:append = " mender-grub mender-image-sd"
-MENDER_FEATURES_ENABLE:append = " mender-uboot mender-image-uefi"
+# tegra
+# these two classes only work as intended when being inherited in the
+# OE4t setup-env.sh style environment, as they modify bblayers.conf
+# and expect additional information on the host.
+INHERIT:remove = "tegra-support-sanity distro_layer_buildinfo"
+INHERIT += "tegra-mender-setup-custom"
+# MENDER_FEATURES_ENABLE:append = " mender-growfs-data"
+MENDER_FEATURES_DISABLE:append = " mender-uboot mender-growfs-data"
+
+# equivalent: EMMC_SIZE = "32 * 1024 * 1024 * 1024"
+EMMC_SIZE = "34359738368"
+MENDER_STORAGE_DEVICE = " /dev/nvme0n1"
+MENDER_DATA_PART_NUMBER = "17"
 
 PREFERRED_VERSION_boost = "1.86.%"
 
