--- a/meta-custom/conf/machine/jetson-orin-nx.conf
+++ b/meta-custom/conf/machine/jetson-orin-nx.conf
@@ -5,9 +5,9 @@
 KERNEL_DEVICETREE = "tegra234-p3768-0000+p3767-0000-nv.dtb"
 
 # Use the closest we can get
-UBOOT_MACHINE = "jetson-tk1"
+# UBOOT_MACHINE = "jetson-tk1"
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
+# PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 
 require conf/machine/include/orin-nx.inc
 require conf/machine/include/devkit-wifi.inc
