--- a/meta-custom/conf/distro/distro-custom.conf
+++ b/meta-custom/conf/distro/distro-custom.conf
@@ -257,7 +257,7 @@ EMMC_SIZE = "34359738368"
 MENDER_STORAGE_DEVICE = " /dev/nvme0n1"
 MENDER_DATA_PART_NUMBER = "17"
 
-PREFERRED_VERSION_boost = "1.86.%"
+# PREFERRED_VERSION_boost = "1.86.%"
 
 USE_REDUNDANT_FLASH_LAYOUT_DEFAULT = "1"
 
