--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -17,5 +17,5 @@ BBLAYERS ?= " \
   ${TOPDIR}/tegra-demo-distro/layers/meta-tegrademo \
   ${TOPDIR}/meta-mender/meta-mender-core \
   ${TOPDIR}/meta-mender-community/meta-mender-tegra \
-  ${TOPDIR}/meta-custom \
+  ${TOPDIR}/meta-jetson-mender-iot-base \
   "
