--- a/meta-jetson-mender-iot-base/conf/distro/distro-jetson-mender-iot-base.conf
+++ b/meta-jetson-mender-iot-base/conf/distro/distro-jetson-mender-iot-base.conf
@@ -3,9 +3,8 @@ require conf/distro/include/tegrademo.inc
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
 
-# Define custom distribution name and version
-DISTRO = "distro-custom"
-DISTRO_NAME = "Custom Linux Distribution"
+DISTRO = "distro-jetson-mender-iot-base"
+DISTRO_NAME = "Jetson Orin NX with Mender Linux"
 DISTRO_VERSION = "1.0"
 
 #
@@ -199,12 +198,6 @@ BB_DISKMON_DIRS ??= "\
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
 
-# PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
-# PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi"
-# PREFERRED_VERSION_linux-raspberrypi = "6.10%"
-
-# PACKAGE_EXCLUDE:remove = "shadow-base"
-
 POKY_INIT_MANAGER = "systemd"
 INIT_MANAGER = "systemd"
 
@@ -248,7 +241,7 @@ MENDER_ROOTFS_PART_B = "${MENDER_STORAGE_DEVICE_BASE}3"
 # OE4t setup-env.sh style environment, as they modify bblayers.conf
 # and expect additional information on the host.
 INHERIT:remove = "tegra-support-sanity distro_layer_buildinfo"
-INHERIT += "tegra-mender-setup-custom"
+INHERIT += "tegra-mender-setup-iot-base"
 # MENDER_FEATURES_ENABLE:append = " mender-growfs-data"
 MENDER_FEATURES_DISABLE:append = " mender-uboot mender-growfs-data"
 
@@ -257,11 +250,9 @@ EMMC_SIZE = "34359738368"
 MENDER_STORAGE_DEVICE = " /dev/nvme0n1"
 MENDER_DATA_PART_NUMBER = "17"
 
-# PREFERRED_VERSION_boost = "1.86.%"
-
 USE_REDUNDANT_FLASH_LAYOUT_DEFAULT = "1"
 
 # Remove extlinux
 # TEGRA_ESSENTIAL_EXTRA_RDEPENDS = ""
 
-MENDER_SERVER_URL = "https://ec2-3-249-34-75.eu-west-1.compute.amazonaws.com"
+MENDER_SERVER_URL = "https://example.eu-west-1.compute.amazonaws.com"
