Remove MENDER_ROOTFS_PART_A_SIZE_MB

--- a/meta-jetson-mender-iot-base/conf/distro/distro-jetson-mender-iot-base.conf
+++ b/meta-jetson-mender-iot-base/conf/distro/distro-jetson-mender-iot-base.conf
@@ -223,9 +223,7 @@ ARTIFACTIMG_FSTYPE = "ext4"
 # Total storage size of the device
 MENDER_STORAGE_TOTAL_SIZE_MB = "4096"
 
-# Root filesystem size (active/passive partitions)
-MENDER_ROOTFS_PART_A_SIZE_MB = "1024"
-MENDER_ROOTFS_PART_B_SIZE_MB = "1024"
+# Root filesystem size takes the rest of the available space
 
 # Data partition (remaining space)
 MENDER_DATA_PART_SIZE_MB = "1024"
