--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -5,17 +5,34 @@ POKY_BBLAYERS_CONF_VERSION = "2"
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
+# Enable using:
+# export JETSON_LAYERS_ENABLED=1
+# export BB_ENV_EXTRAWHITE="${BB_ENV_EXTRAWHITE} JETSON_LAYERS_ENABLED"
+JETSON_LAYERS_ENABLED ?= "1"
+JETSON_LAYERS ?= " \
+  ${TOPDIR}/meta-mender-community/meta-mender-tegra \
+  ${TOPDIR}/tegra-demo-distro/layers/meta-virtualization \
+  ${TOPDIR}/tegra-demo-distro/layers/meta-tegra-support \
+  ${TOPDIR}/tegra-demo-distro/layers/meta-tegrademo \
+  ${TOPDIR}/tegra-demo-distro/layers/meta-tegra \
+  ${TOPDIR}/meta-jetson-mender-iot-base \
+  "
+
+RASPBERRYPI_LAYERS_ENABLED ?= "0"
+RASPBERRYPI_LAYERS ?= " \
+  ${TOPDIR}/meta-raspberry \
+  ${TOPDIR}/meta-raspberrypi-mender-iot-base \
+  ${TOPDIR}/tegra-demo-distro/repos/poky/meta-poky \
+  "
+
 BBLAYERS ?= " \
   ${TOPDIR}/tegra-demo-distro/layers/meta \
-  ${TOPDIR}/tegra-demo-distro/layers/meta-tegra \
   ${TOPDIR}/tegra-demo-distro/layers/meta-oe \
   ${TOPDIR}/tegra-demo-distro/layers/meta-python \
   ${TOPDIR}/tegra-demo-distro/layers/meta-networking \
   ${TOPDIR}/tegra-demo-distro/layers/meta-filesystems \
-  ${TOPDIR}/tegra-demo-distro/layers/meta-virtualization \
-  ${TOPDIR}/tegra-demo-distro/layers/meta-tegra-support \
-  ${TOPDIR}/tegra-demo-distro/layers/meta-tegrademo \
+  ${@bb.utils.contains('JETSON_LAYERS_ENABLED', '1', '${JETSON_LAYERS}', '', d)} \
+  ${@bb.utils.contains('RASPBERRYPI_LAYERS_ENABLED', '1', '${RASPBERRYPI_LAYERS}', '', d)} \
+  ${TOPDIR}/meta-mender-append \
   ${TOPDIR}/meta-mender/meta-mender-core \
-  ${TOPDIR}/meta-mender-community/meta-mender-tegra \
-  ${TOPDIR}/meta-jetson-mender-iot-base \
   "
