Fix conditional layer include

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -7,7 +7,7 @@ BBFILES ?= ""
 
 # Enable using:
 # export JETSON_LAYERS_ENABLED=1
-# export BB_ENV_EXTRAWHITE="${BB_ENV_EXTRAWHITE} JETSON_LAYERS_ENABLED"
+# export BB_ENV_PASSTHROUGH_ADDITIONS="JETSON_LAYERS_ENABLED"
 JETSON_LAYERS_ENABLED ?= "1"
 JETSON_LAYERS ?= " \
   ${TOPDIR}/meta-mender-community/meta-mender-tegra \
@@ -17,6 +17,7 @@ JETSON_LAYERS ?= " \
   ${TOPDIR}/tegra-demo-distro/layers/meta-tegra \
   ${TOPDIR}/meta-jetson-mender-iot-base \
   "
+BBMASK += "${@ ".*raspberrypi.*" if bb.utils.to_boolean(d.getVar('JETSON_LAYERS_ENABLED')) else "" }"
 
 RASPBERRYPI_LAYERS_ENABLED ?= "0"
 RASPBERRYPI_LAYERS ?= " \
@@ -24,6 +25,7 @@ RASPBERRYPI_LAYERS ?= " \
   ${TOPDIR}/meta-raspberrypi-mender-iot-base \
   ${TOPDIR}/tegra-demo-distro/repos/poky/meta-poky \
   "
+BBMASK += "${@ ".*jetson.*" if bb.utils.to_boolean(d.getVar('RASPBERRYPI_LAYERS_ENABLED')) else "" }"
 
 BBLAYERS ?= " \
   ${TOPDIR}/tegra-demo-distro/layers/meta \
