--- a/meta-raspberrypi-mender-iot-base/conf/distro/distro-raspberrypi-mender-iot-base.conf
+++ b/meta-raspberrypi-mender-iot-base/conf/distro/distro-raspberrypi-mender-iot-base.conf
@@ -228,7 +228,7 @@ MENDER_STORAGE_TOTAL_SIZE_MB = "4096"
 # Data partition (remaining space)
 MENDER_DATA_PART_SIZE_MB = "1024"
 
-MENDER_STORAGE_DEVICE_BASE = '/dev/nvme0n1p'
+MENDER_STORAGE_DEVICE_BASE = '/dev/mmcblk0p'
 
 MENDER_DATA_PART = "${MENDER_STORAGE_DEVICE_BASE}4"
 MENDER_ROOTFS_PART_A = "${MENDER_STORAGE_DEVICE_BASE}2"
@@ -236,8 +236,6 @@ MENDER_ROOTFS_PART_B = "${MENDER_STORAGE_DEVICE_BASE}3"
 
 MENDER_FEATURES_ENABLE:append = " mender-image-sd"
 MENDER_FEATURES_DISABLE:append = " mender-image-uefi"
-
-# MENDER_STORAGE_DEVICE = " /dev/nvme0n1"
 
 USE_REDUNDANT_FLASH_LAYOUT_DEFAULT = "1"
 
